# bayesianbandits

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  LIPSCHITZ_IMPLEMENTATION_PLAN.md  README.md  hybrid_contextual_bandits_script.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml  matrix_test.yml
bayesianbandits/: __init__.py  _agent_pipeline.py  _arm.py  _arm_featurizer.py  _bandit.py  _basebandit.py  _choice_decorators.py  _eb_estimators.py  _empirical_bayes.py  _estimators.py  _gaussian.py  _np_utils.py  _policy_decorators.py  _sparse_bayesian_linear_regression.py  _takahashi.pyx  _typing.py  api.py  pipeline.py
bayesianbandits/featurizers/: __init__.py  _arm_column.py  _continuous.py  _function.py  _one_hot.py
bayesianbandits/pipelines/: _agent.py
bayesianbandits/policies/: __init__.py  _epsilon_greedy.py  _exp3a.py  _thompson_sampling.py  _upper_confidence_bound.py
benchmarks/: build_variants.py  conftest.py  micro_pow.pyx  run_benchmarks.py  run_full_analysis.py  takahashi_baseline.pyx  takahashi_memview_ofast.pyx  takahashi_no_cdiv.pyx  takahashi_poisoned.pyx  test_bench_estimators.py  test_bench_forgetting.py
docs/: DOCUMENTATION_STRATEGY.md  api.rst  changelog.rst  conf.py  examples.rst  getting-started.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  usage.rst
docs/_static/: style.css
docs/_templates/autosummary/: class.rst
docs/explanation/: decision-theory.rst  index.rst  worldview.rst
docs/howto/: decay.rst  delayed-rewards.rst  index.rst  pipelines.rst  production.rst  reward-functions.rst  sparse.rst
docs/math/: dirichlet-eb.rst  empirical-bayes.rst  forgetting.rst  gamma-eb.rst  glm.rst  index.rst  intercept-only.rst  normal-inverse-gamma.rst  normal.rst  policies.rst
docs/notebooks/: adversarial.ipynb  counts.ipynb  delayed-reward.ipynb  demo.ipynb  empirical-bayes.ipynb  hybrid-bandits.ipynb  linear-bandits.ipynb  offline-learning.ipynb  persistence.ipynb
src/bayesianbandits/: __init__.py  _arm.py  _arm_featurizer.py  _blas_helpers.py  _eb_estimators.py  _empirical_bayes.py  _estimators.py  _forgetting.py  _gaussian.py  _sparse_bayesian_linear_regression.py  _takahashi.pyx  api.py
src/bayesianbandits/featurizers/: __init__.py  _arm_column.py
src/bayesianbandits/pipelines/: __init__.py  _agent.py  _learner.py
src/bayesianbandits/policies/: __init__.py  _base.py  _epsilon_greedy.py  _exp3a.py  _thompson_sampling.py  _upper_confidence_bound.py
tests/: test_agent_pipeline.py  test_api.py  test_arm.py  test_arm_column_featurizer.py  test_arm_featurizer.py  test_bandit.py  test_bandit_pickling.py  test_basebandit.py  test_batch_pull.py  test_batch_reward_examples.py  test_batch_reward_function.py  test_bayesian_glm.py  test_eb_estimators.py  test_empirical_bayes.py  test_estimators.py  test_exp3a.py  test_forgetting.py  test_gaussian_posterior_laplace.py  test_howto_decay.py  test_howto_delayed_rewards.py  test_howto_pipelines.py  test_howto_production.py  test_howto_reward_functions.py  test_howto_sparse.py  test_learner_pipeline.py  test_link_functions.py  test_lipschitz_contextual_agent.py  test_mathematical_correctness.py  test_normal_estimators.py  test_pipeline.py  test_policy_decorators.py  test_quickstart.py  test_rng_reseed.py  test_solver_detection.py  test_sparse_bayesian_linear_regression.py
tests/ill_conditioned_matrices/: matrix_0  matrix_1  matrix_10  matrix_11  matrix_12  matrix_13  matrix_14  matrix_15  matrix_16  matrix_17  matrix_18  matrix_19  matrix_2  matrix_20  matrix_21  matrix_22  matrix_23  matrix_24  matrix_3  matrix_4  matrix_5  matrix_6  matrix_7  matrix_8  matrix_9
