[tool.poetry]
name = "bayesianbandits"
version = "0.7.0"
description = "A Pythonic microframework for Multi-Armed Bandit algorithms."
authors = ["Rishi Kulkarni <rishi@kulkarni.science>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
scipy = ">=1.11.0"
scikit-learn = ">=1.2.0"
attrs = ">=21.2.0"
typing-extensions = ">=4.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"
ipython = "^8.16.1"
coverage = "^7.4.4"
ipykernel = "^6.25.2"
matplotlib = "^3.8.4"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
numpydoc = "^1.7.0"
nbsphinx = "^0.9.3"
line-profiler = "^4.1.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.cholmod.dependencies]
scikit-sparse = "^0.4.14"

[tool.pytest.ini_options]
addopts = "--doctest-modules -v"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
