[project]
name = "bayesianbandits"
version = "1.0.0"
description = "A Pythonic microframework for Multi-Armed Bandit algorithms."
authors = [{ name = "Rishi Kulkarni", email = "rishi@kulkarni.science" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "scipy>=1.14.0",
    "numpy>=1.23.5",
    "scikit-learn>=1.3.0",
    "attrs>=21.2.0",
    "typing-extensions>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "black>=24.3.0,<25",
    "flake8>=7.0.0,<8",
    "ipython>=8.16.1,<9",
    "coverage>=7.4.4,<8",
    "ipykernel>=6.25.2,<7",
    "matplotlib>=3.8.4,<4",
    "sphinx>=7.2.6,<8",
    "sphinx-rtd-theme>=1.3.0,<2",
    "numpydoc>=1.7.0,<2",
    "nbsphinx>=0.9.3,<0.10",
    "line-profiler>=4.1.1,<5",
    "pytest-cov>=5.0.0,<6",
    "optuna>=4.0.0,<5",
    "ipywidgets>=8.1.5,<9",
]
cholmod = ["scikit-sparse>=0.4.15,<0.5"]

[tool.uv]
default-groups = [
    "dev",
    "cholmod",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--doctest-modules -v"
filterwarnings = "ignore::DeprecationWarning"
