[project]
name = "bayesianbandits"
version = "1.2.0"
description = "A Pythonic microframework for Multi-Armed Bandit algorithms."
authors = [{ name = "Rishi Kulkarni", email = "rishi@kulkarni.science" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "scipy>=1.14.0",
    "numpy>=2.0",
    "scikit-learn>=1.5.2",
    "attrs>=21.2.0",
    "typing-extensions>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.9,<1",
    "ipython>=8.16.1,<9",
    "coverage>=7.4.4,<8",
    "ipykernel>=6.25.2,<7",
    "matplotlib>=3.8.4,<4",
    "sphinx>=7.2.6,<8",
    "pydata-sphinx-theme>=0.16,<1",
    "numpydoc>=1.7.0,<2",
    "nbsphinx>=0.9.3,<0.10",
    "line-profiler>=4.1.1,<5",
    "pytest-cov>=5.0.0,<6",
    "optuna>=4.0.0,<5",
    "ipywidgets>=8.1.5,<9",
    "pandas>=2.2.3",
    "pyright==1.1.402",
    "cython>=3.0",
    "pytest-benchmark>=5.1.0,<6",
]
cholmod = ["scikit-sparse>=0.5.0,<0.6"]

[tool.uv]
default-groups = [
    "dev",
    "cholmod",
]

[tool.pyright]
include = [
    "src/bayesianbandits",
    "tests",
]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 88
exclude = [
    "docs/source/conf.py",
    "old",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.format]
# Black-compatible defaults

[build-system]
requires = ["setuptools>=75", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bayesianbandits = ["*.pyx"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -v"
filterwarnings = "ignore::DeprecationWarning"
markers = [
    "cython: tests that exercise the Cython extension (no suitesparse needed)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
omit = ["benchmarks/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "@overload",
    "if TYPE_CHECKING:",
    "except ImportError",
    "raise NotImplementedError",
]
